# experiments

./: .gitignore
APUE/: dwalk132.cpp  fcntl84.cpp  fork12.cpp  fork243.cpp  ftype96.cpp  procenv202  procenv202.cpp  readme.md  system266.cpp
APUE/rust_procenv/: getpid.cpp
APUE/test/: testfile.txt
async/: disasm.txt  disasm_aarch64.txt  disasm_lambdas.txt  overload182.cpp  readme.md
async_init/: async_init.cpp  async_init_mtx_only.cpp
char/: char.cpp
compare_exchange/: CMakeLists.txt
compare_exchange/compare_exchange/: CMakeLists.txt  compare_exchange.cpp  compare_exchange.h
concepts/: CMakeLists.txt
concepts/concepts/: CMakeLists.txt  concepts.cpp
enum_drivers/: enum_drivers.sln
enum_drivers/enum_drivers/: enum_drivers.cpp  enum_drivers.vcxproj  enum_drivers.vcxproj.filters
lock_based_ds/: CMakeLists.txt
lock_based_ds/lock_based_ds/: CMakeLists.txt  lock_based_ds.cpp  lock_based_queue.h  lock_based_stack.h  main.cpp  map.h  sll.h  sll_q.h
magic_static_init_race/: .race.cpp.swp  race.cpp  readme.txt
mt_dir_walk/: .clang-format  CMakeLists.txt  build  main.cpp  mt_stack.h  readme.md  sha256.cpp  sha256.h  timer.h  todo.md  utils.cpp  utils.h
overload_resolution/: .over_res.cpp.swp  over_res.cpp
rust_procenv/: procenv  procenv.rs  readme.md
sign_extension/: main.cpp  movlib.nasm  movlib_win.nasm  readme.md
spin_mtx/: CMakeLists.txt
spin_mtx/spin_mtx/: CMakeLists.txt  main.cpp  spin_mtx.cpp  spin_mtx.h
std_format/: byte.cpp  ieee754.cpp
sw/: CMakeLists.txt  readme.md  sw.cpp
sw/exe/: main.cpp
sw/swlib/: sw.cpp  sw.h
sw/tests/: testdata.h  tests.cpp
tmp/: .sort.cpp.swp  factorial.cpp  sort.cpp
ts_queue/: CMakeLists.txt
ts_queue/ts_queue/: CMakeLists.txt  main.cpp  ts_queue.cpp  ts_queue.h
