# CMakeList.txt : CMake project for spin_mtx, include source and define
# project specific logic here.
#

# Add source to this project's executable.
add_executable (spin_mtx "spin_mtx.cpp" "spin_mtx.h" "main.cpp")

if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET spin_mtx PROPERTY CXX_STANDARD 20)
endif()

# TODO: Add tests and install targets if needed.
